# ufmt

./: .flake8  .gitignore  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  makefile  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml  ci.yml
docs/: api.rst  conf.py  guide.rst  index.rst
docs/_static/: custom.css
docs/_templates/: omnilib.html
ufmt/: __init__.py  __version__.py  cli.py  config.py  core.py  lsp.py  types.py  util.py
ufmt/tests/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  core.py  lsp.py  smoke.py  util.py
