[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ufmt"
author = "John Reese"
author-email = "john@noswap.com"
description-file = "README.md"
home-page = "https://ufmt.omnilib.dev"
requires = ["black>=20.8b0", "usort>=0.5.0"]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.flit.metadata.urls]
Github = "https://github.com/omnilib/ufmt"

[tool.flit.scripts]
ufmt = "ufmt.cli:main"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "µfmt"
package = "ufmt"
version_file = true
signed_tags = true

[tool.coverage.run]
branch = true
include = ["ufmt/*"]
omit = ["ufmt/tests/*"]

[tool.coverage.report]
fail_under = 100
precision = 1
show_missing = true
skip_covered = true